Migrate to new URI API (#11824)
* Sort alphabetically

* Add org.openrewrite.java.migrate.net.URLConstructorsToURIRecipes to reduce warnings

* Optimize imports

* Add new exception