@@ -1,6 +1,6 @@
 package org.jabref.logic.importer.fetcher;
 
-import java.net.URL;
+import java.net.URI;
 import java.util.Optional;
 
 import org.jabref.model.entry.BibEntry;
@@ -25,13 +25,13 @@ class ApsFetcherTest {
     @Test
     void findFullTextFromDoi() throws Exception {
         BibEntry entry = new BibEntry().withField(StandardField.DOI, "10.1103/PhysRevLett.116.061102");
-        assertEquals(Optional.of(new URL("https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.116.061102")), finder.findFullText(entry));
+        assertEquals(Optional.of(URI.create("https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.116.061102").toURL()), finder.findFullText(entry));
     }
 
     @Test
     void findFullTextFromLowercaseDoi() throws Exception {
         BibEntry entry = new BibEntry().withField(StandardField.DOI, "10.1103/physrevlett.124.029002");
-        assertEquals(Optional.of(new URL("https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.124.029002")), finder.findFullText(entry));
+        assertEquals(Optional.of(URI.create("https://journals.aps.org/prl/pdf/10.1103/PhysRevLett.124.029002").toURL()), finder.findFullText(entry));
     }
 
     @Test
